tests/src/frontend/visibility/invalid/global_private_fun.sk
private fun foo(): void {
  void
}
